domain unit tests