@@ -1,171 +1,82 @@
 package ch.sbb.backend.formation.domain.model;
 
 import ch.sbb.backend.common.TelTsi;
+import java.util.Collections;
 import java.util.List;
-import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Getter;
 
-@AllArgsConstructor
+@Builder
 public class FormationRun {
 
     private Boolean inspected;
-    @TelTsi
+    @Getter @TelTsi
     private String company;
-    private TafTapLocationReference tafTapLocationReferenceStart;
-    private TafTapLocationReference tafTapLocationReferenceEnd;
-    private String trainCategoryCode;
-    private Integer brakedWeightPercentage;
-    private Integer tractionMaxSpeedInKmh;
-    private Integer hauledLoadMaxSpeedInKmh;
-    private Integer tractionLengthInCm;
-    private Integer hauledLoadLengthInCm;
-    private Integer tractionGrossWeightInT;
-    private Integer hauledLoadGrossWeightInT;
-    private Integer tractionBrakedWeightInT;
-    private Integer hauledLoadBrakedWeightInT;
-    private Boolean brakePositionGForLeadingTraction;
-    private Boolean brakePositionGForBrakeUnit1to5;
-    private Boolean brakePositionGForLoadHauled;
-    private Boolean simTrain;
-    private Boolean carCarrierVehicle;
-    private Integer axleLoadMaxInKg;
-    private String routeClass;
-    private Integer gradientUphillMaxInPermille;
-    private Integer gradientDownhillMaxInPermille;
-    private String slopeMaxForHoldingForceMinInPermille;
+    @Getter private TafTapLocationReference tafTapLocationReferenceStart;
+    @Getter private TafTapLocationReference tafTapLocationReferenceEnd;
+    @Getter private String trainCategoryCode;
+    @Getter private Integer brakedWeightPercentage;
+    @Getter private Integer tractionMaxSpeedInKmh;
+    @Getter private Integer hauledLoadMaxSpeedInKmh;
+    @Getter private Integer formationMaxSpeedInKmh;
+    @Getter private Integer tractionLengthInCm;
+    @Getter private Integer hauledLoadLengthInCm;
+    @Getter private Integer formationLengthInCm;
+    @Getter private Integer tractionGrossWeightInT;
+    @Getter private Integer hauledLoadGrossWeightInT;
+    @Getter private Integer tractionBrakedWeightInT;
+    @Getter private Integer hauledLoadBrakedWeightInT;
+    @Getter private Boolean brakePositionGForLeadingTraction;
+    @Getter private Boolean brakePositionGForBrakeUnit1to5;
+    @Getter private Boolean brakePositionGForLoadHauled;
+    @Getter private Boolean simTrain;
+    @Getter private Boolean carCarrierVehicle;
+    @Getter private Integer axleLoadMaxInKg;
+    @Getter private String routeClass;
+    @Getter private Integer gradientUphillMaxInPermille;
+    @Getter private Integer gradientDownhillMaxInPermille;
+    @Getter private String slopeMaxForHoldingForceMinInPermille;
     private List<Vehicle> vehicles;
 
     static List<FormationRun> inspected(List<FormationRun> formationRuns) {
-        if (formationRuns == null || formationRuns.isEmpty()) {
-            return List.of();
+        if (formationRuns == null) {
+            return Collections.emptyList();
         }
         return formationRuns.stream()
             .filter(formationRun -> formationRun.inspected)
             .toList();
     }
 
-    public String getCompany() {
-        return company;
-    }
-
-    public TafTapLocationReference getTafTapLocationReferenceStart() {
-        return tafTapLocationReferenceStart;
-    }
-
-    public TafTapLocationReference getTafTapLocationReferenceEnd() {
-        return tafTapLocationReferenceEnd;
-    }
-
-    public String getTrainCategoryCode() {
-        return trainCategoryCode;
-    }
-
-    public Integer getBrakedWeightPercentage() {
-        return brakedWeightPercentage;
-    }
-
-    public Integer getTractionMaxSpeedInKmh() {
-        return tractionMaxSpeedInKmh;
-    }
-
-    public Integer getHauledLoadMaxSpeedInKmh() {
-        return hauledLoadMaxSpeedInKmh;
-    }
-
-    public Integer getTractionLengthInCm() {
-        return tractionLengthInCm;
-    }
-
-    public Integer getHauledLoadLengthInCm() {
-        return hauledLoadLengthInCm;
-    }
-
-    public Integer getTractionGrossWeightInT() {
-        return tractionGrossWeightInT;
-    }
-
-    public Integer getHauledLoadGrossWeightInT() {
-        return hauledLoadGrossWeightInT;
-    }
-
-    public Integer getTractionBrakedWeightInT() {
-        return tractionBrakedWeightInT;
-    }
-
-    public Integer getHauledLoadBrakedWeightInT() {
-        return hauledLoadBrakedWeightInT;
-    }
-
-    public boolean isBrakePositionGForLeadingTraction() {
-        return brakePositionGForLeadingTraction;
-    }
-
-    public boolean isBrakePositionGForBrakeUnit1to5() {
-        return brakePositionGForBrakeUnit1to5;
-    }
-
-    public boolean isBrakePositionGForLoadHauled() {
-        return brakePositionGForLoadHauled;
-    }
-
-    public boolean isSimTrain() {
-        return simTrain;
-    }
-
-    public boolean isCarCarrierVehicle() {
-        return carCarrierVehicle;
-    }
-
-    public Integer getAxleLoadMaxInKg() {
-        return axleLoadMaxInKg;
-    }
-
-    public String getRouteClass() {
-        return routeClass;
-    }
-
-    public Integer getGradientUphillMaxInPermille() {
-        return gradientUphillMaxInPermille;
-    }
-
-    public Integer getGradientDownhillMaxInPermille() {
-        return gradientDownhillMaxInPermille;
-    }
-
-    public String getSlopeMaxForHoldingForceMinInPermille() {
-        return slopeMaxForHoldingForceMinInPermille;
-    }
-
-    public Integer formationMaxSpeedInKmh() {
-        return tractionMaxSpeedInKmh + hauledLoadMaxSpeedInKmh;
-    }
-
-    public Integer formationLenghtInCm() {
-        return tractionMaxSpeedInKmh + hauledLoadMaxSpeedInKmh;
-    }
-
     public Integer formationGrossWeightInT() {
+        if (tractionGrossWeightInT == null || hauledLoadGrossWeightInT == null) {
+            return null;
+        }
         return tractionGrossWeightInT + hauledLoadGrossWeightInT;
     }
 
     public Integer formationBrakedWeightInT() {
+        if (tractionBrakedWeightInT == null || hauledLoadBrakedWeightInT == null) {
+            return null;
+        }
         return tractionBrakedWeightInT + hauledLoadBrakedWeightInT;
     }
 
     public Integer tractionHoldingForceInHectoNewton() {
-        return Vehicle.filterTraction(vehicles).stream()
-            .mapToInt(Vehicle::holdingForce).sum();
+        return Vehicle.tractionHoldingForceInHectoNewton(vehicles);
     }
 
-    public Integer hauledLoadHolding() {
-        return Vehicle.filterHauledLoad(vehicles).stream()
-            .mapToInt(Vehicle::holdingForce).sum();
+    public Integer hauledLoadHoldingForceInHectoNewton() {
+        return Vehicle.hauledLoadHoldingForceInHectoNewton(vehicles);
     }
 
     public Integer formationHoldingForceInHectoNewton() {
-        return vehicles.stream().mapToInt(Vehicle::holdingForce).sum();
+        return Vehicle.holdingForce(vehicles);
     }
 
     public List<TractionMode> tractionModes() {
+        if (vehicles == null) {
+            return Collections.emptyList();
+        }
         return vehicles.stream()
             .filter(Vehicle::isTraction)
             .map(Vehicle::getTractionMode)
@@ -177,6 +88,9 @@ public class FormationRun {
     }
 
     public Integer vehicleCount() {
+        if (vehicles == null) {
+            return 0;
+        }
         return vehicles.size();
     }
 
@@ -193,7 +107,7 @@ public class FormationRun {
     }
 
     public EuropeanVehicleNumber europeanVehicleNumberLast() {
-        return Vehicle.first(vehicles) != null ? Vehicle.last(vehicles).getEuropeanVehicleNumber() : null;
+        return Vehicle.last(vehicles) != null ? Vehicle.last(vehicles).getEuropeanVehicleNumber() : null;
     }
 }
 
